--- a/src/components/Pages/Register/Register.css
+++ b/src/components/Pages/Register/Register.css
@@ -83,3 +83,31 @@ input::placeholder {
 .password {
 	width: 100%;
 }
+
+.createAccount {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.createAccount > button {
+	background-color: #283d3b;
+	color: #fff;
+	border: 2px solid #fff;
+	width: 100%;
+	height: 50px;
+	border-radius: 10px;
+	margin-top: 10px;
+	padding: 8px 0px;
+	font-size: 16px;
+	font-weight: 300;
+	letter-spacing: 1px;
+	margin-bottom: 7px;
+}
+
+.createAccount > button:hover {
+	cursor: pointer;
+	color: snow;
+	background-color: #197278;
+}
