--- a/src/components/Header/NavBar.css
+++ b/src/components/Header/NavBar.css
@@ -10,6 +10,11 @@
 	margin-right: 40px;
 }
 
+.register {
+	margin-left: 20px;
+	flex: 2;
+}
+
 .NavBar {
 	background-color: #283d3b;
 	height: 80px;
@@ -42,11 +47,13 @@
 	top: 0;
 	left: -100%;
 	transition: 850ms;
+	z-index: 1;
 }
 
 .nav-menu.active {
 	left: 0;
 	transition: 350ms;
+	z-index: 1;
 }
 
 .nav-text {
