--- a/src/components/Header/NavBar.css
+++ b/src/components/Header/NavBar.css
@@ -65,6 +65,10 @@
 	height: 60px;
 }
 
+.nav-text-inactive {
+	display: none;
+}
+
 .nav-text a {
 	text-decoration: none;
 	color: #f5f5f5;
@@ -79,6 +83,7 @@
 
 .nav-text a:hover {
 	background-color: #197278;
+	color: #f7877a;
 }
 
 .nav-menu-items {
