--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,5 +1,5 @@
 .foot-container {
-	height: 100vh;
+	height: auto;
 	position: relative;
 }
 
@@ -12,7 +12,6 @@ footer {
 	font-size: 18px;
 	z-index: 1000;
 	width: 100%;
-	position: absolute;
 	bottom: 0;
 }
 a {
