--- a/src/components/Pages/Detail/detail-slider.css
+++ b/src/components/Pages/Detail/detail-slider.css
@@ -1,9 +1,3 @@
-.img-container {
-	max-width: 500px; /* 
-    height: 400px; */
-	width: 40%;
-}
-
 .img-container > img {
 	width: 100%;
 	height: 100%;
@@ -16,6 +10,9 @@ main {
 .detail {
 	width: 60%;
 	padding: 30px;
+}
+.detail > div {
+	margin-bottom: 10px;
 }
 .img-container {
 	padding: 30px;
@@ -33,13 +30,15 @@ main {
 	word-break: break-all;
 }
 
-@media only screen and (max-width: 1178px) {
+@media only screen and (max-width: 949px) {
 	main {
 		flex-direction: column;
 	}
 	.img-container {
 		width: 100%;
+		max-width: none;
 	}
+
 	.detail {
 		width: 100%;
 	}
