--- a/src/components/Header/NavBar.css
+++ b/src/components/Header/NavBar.css
@@ -81,6 +81,18 @@
 	border-radius: 4px;
 }
 
+.nav-text-button {
+	text-decoration: none;
+	color: #f5f5f5;
+	font-size: 18px;
+	width: 200px;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	padding: 0 16px;
+	border-radius: 4px;
+}
+
 .nav-text a:hover {
 	background-color: #197278;
 	color: #f7877a;
