--- a/src/components/Header/NavBar.css
+++ b/src/components/Header/NavBar.css
@@ -23,6 +23,14 @@
 	align-items: center;
 }
 
+.menu-bars:hover {
+	color: #f5f5f5;
+}
+
+.NavBar:hover {
+	color: #f5f5f5;
+}
+
 .menu-bars {
 	color: #f5f5f5;
 	margin-left: 40px;
