--- a/src/components/Pages/Detail/detail-slider.css
+++ b/src/components/Pages/Detail/detail-slider.css
@@ -1,12 +1,46 @@
-.img-container > img {
-	width: 100%;
-	height: 100%;
-	max-width: 100%;
-}
 main {
 	display: flex;
-	/* 	flex-wrap: wrap; */
 }
+
+.detail-img {
+	box-shadow: 0px 1px 10px;
+	border-radius: 20px;
+	height: 400px;
+	width: 500px;
+}
+
+.wrapper {
+	height: 450px;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	background-color: #772e25;
+}
+.form-wrapper {
+	margin-right: 30px;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	padding: 20px 40px;
+	border-radius: 20px;
+	margin-left: -100px;
+	background-color: snow;
+}
+
+.form-wrapper-img {
+	padding-top: 10px;
+	padding-left: 10px;
+	margin-left: -100px;
+	width: 520px;
+	height: 420px;
+	display: flex;
+	flex-direction: column;
+	border-radius: 20px;
+	background-color: snow;
+}
+
 .detail {
 	width: 60%;
 	padding: 30px;
@@ -22,8 +56,9 @@ main {
 	align-items: center;
 	justify-content: space-between;
 }
-.detail_place_rating {
-	flex: 1;
+.detail_place {
+	display: flex;
+	align-items: center;
 	margin-left: 15px;
 }
 .detail_descrition {
@@ -41,5 +76,9 @@ main {
 
 	.detail {
 		width: 100%;
+	}
+
+	.wrapper {
+		flex-wrap: wrap;
 	}
 }
