--- a/src/components/Pages/Detail/detail-slider.css
+++ b/src/components/Pages/Detail/detail-slider.css
@@ -29,6 +29,40 @@ main {
 	background-color: snow;
 }
 
+.space {
+	height: 200px;
+	display: flex;
+	width: 100%;
+	justify-content: center;
+	background-color: #772e25;
+}
+
+.wrapper-map {
+	height: 180px;
+	width: 90%;
+	display: flex;
+	flex-wrap: wrap;
+	background-color: #772e25;
+}
+.form-wrapper-map {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	padding: 20px 40px;
+	border-radius: 20px;
+	background-color: snow;
+}
+
+.reviewer {
+	font-weight: bold;
+}
+
+.photo-reviewer {
+	height: 30px;
+	width: 30px;
+}
+
 .form-wrapper-img {
 	padding-top: 10px;
 	padding-left: 10px;
