--- a/src/components/Pages/Profile/Profile.css
+++ b/src/components/Pages/Profile/Profile.css
@@ -5,6 +5,10 @@
 	text-align: center;
 	background-color: #283d3b;
 	color: white;
+	border-bottom: solid 4px;
+	border-color: #edddd4;
+	padding-top: 20px;
+	border-top: none;
 }
 
 .userProfile--picture {
@@ -25,6 +29,7 @@
 	justify-content: space-between;
 	align-items: space-between;
 	padding: 30px;
+	color: #edddd4;
 }
 
 .favorites--deck {
@@ -40,6 +45,7 @@
 	flex-direction: row;
 	justify-content: flex-start;
 	align-items: flex-start;
+	text-align: center;
 	padding-left: 40px;
 }
 
@@ -73,6 +79,8 @@
 }
 
 .section--body {
-	background-color: #edddd4;
+	background-color: #772e25;
 	padding: 40px;
+	border-bottom: solid 4px;
+	border-color: #edddd4;
 }
