--- a/src/components/Header/NavBar.css
+++ b/src/components/Header/NavBar.css
@@ -32,10 +32,13 @@
 }
 
 .menu-bars {
+	cursor: pointer;
 	color: #f5f5f5;
 	margin-left: 40px;
 	font-size: 30px;
 	background: none;
+	display: flex;
+	align-items: center;
 }
 
 .menu-close {
@@ -69,8 +72,25 @@
 	justify-content: flex-start;
 	align-items: center;
 	padding: 8px 0px 8 px 16px;
-	list-style: none;
 	height: 60px;
+}
+
+.nav-text-log {
+	text-decoration: none;
+	color: #f5f5f5;
+	font-size: 18px;
+	width: 150px;
+	margin-left: -1px;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	padding: 0 16px;
+	border-radius: 4px;
+}
+
+.nav-text-log:hover {
+	background-color: #197278;
+	color: #d48928;
 }
 
 .nav-text-inactive {
@@ -89,11 +109,11 @@
 	border-radius: 4px;
 }
 
-.nav-text-button {
+.nav-text-icon {
 	text-decoration: none;
 	color: #f5f5f5;
 	font-size: 18px;
-	width: 200px;
+	width: 50px;
 	height: 100%;
 	display: flex;
 	align-items: center;
@@ -129,5 +149,5 @@
 }
 
 span {
-	margin-left: 16px;
+	margin-left: 30px;
 }
