--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,9 +1,10 @@
 .foot-container {
 	position: relative;
+	display: flex;
+	justify-content: center;
 }
 
 footer {
-	display: flex;
 	background-color: #283d3b;
 	color: white;
 	padding: 10px;
@@ -17,6 +18,7 @@ footer {
 	margin-left: 20px;
 	text-decoration: none;
 	color: white;
+	justify-content: center;
 }
 
 .footer-strings:hover {
@@ -31,4 +33,14 @@ footer {
 .footer-icon:hover {
 	cursor: pointer;
 	color: #d48928;
+}
+
+@media only screen and (max-width: 668px) {
+	.footer-separator {
+		display: none;
+	}
+	.foot-container {
+		flex-direction: column;
+		align-items: center;
+	}
 }
