--- a/src/components/Pages/Detail/detail-slider.css
+++ b/src/components/Pages/Detail/detail-slider.css
@@ -99,13 +99,28 @@ main {
 	word-break: break-all;
 }
 
-@media only screen and (max-width: 949px) {
+@media only screen and (max-width: 900px) {
 	main {
 		flex-direction: column;
 	}
 	.img-container {
-		width: 100%;
+		width: 80%;
 		max-width: none;
+	}
+
+	.wrapper-detail {
+		padding-left: 100px;
+	}
+
+	.detail-img {
+		height: 230px;
+		width: 330px;
+	}
+
+	.form-wrapper-img {
+		margin-top: -100px;
+		width: 350px;
+		height: 250px;
 	}
 
 	.detail {
@@ -114,5 +129,34 @@ main {
 
 	.wrapper {
 		flex-wrap: wrap;
+	}
+
+	.form-wrapper-detail {
+		margin-right: 0px;
+		width: 330px;
+		margin-top: -30px;
+	}
+
+	.wrapper-map {
+		margin-top: 100px;
+		height: 200px;
+		width: 90%;
+		display: flex;
+		flex-wrap: wrap;
+		background-color: #772e25;
+	}
+
+	.form-wrapper-map {
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		padding: 20px 40px;
+		border-radius: 20px;
+		background-color: snow;
+	}
+
+	.space {
+		height: 250px;
 	}
 }
